tests/auto/qquickpopup/tst_qquickpopup.cpp
@@ -93,6 +93,7 @@ private slots:
     void countChanged();
     void toolTipCrashOnClose();
     void setOverlayParentToNull();
+    void invisibleToolTipOpen();
 };
 
 void tst_QQuickPopup::initTestCase()
@@ -1297,6 +1298,33 @@ void tst_QQuickPopup::setOverlayParentToNull()
 
     QVERIFY(window->close());
     // While nullifying the overlay parent doesn't make much sense, it shouldn't crash.
+}
+
+void tst_QQuickPopup::invisibleToolTipOpen()
+{
+    QQuickApplicationHelper helper(this, "invisibleToolTipOpen.qml");
+
+    QQuickWindow *window = helper.window;
+    centerOnScreen(window);
+    moveMouseAway(window);
+    window->show();
+    QVERIFY(QTest::qWaitForWindowActive(window));
+
+    QQuickItem *mouseArea = qvariant_cast<QQuickItem *>(window->property("mouseArea"));
+    QVERIFY(mouseArea);
+    QObject *loader = qvariant_cast<QObject *>(window->property("loader"));
+    QVERIFY(loader);
+
+    QTest::mouseMove(window, QPoint(mouseArea->width() / 2, mouseArea->height() / 2));
+    QTRY_VERIFY(mouseArea->property("isToolTipVisible").toBool());
+
+    QSignalSpy componentLoadedSpy(loader, SIGNAL(loaded()));
+    QVERIFY(componentLoadedSpy.isValid());
+
+    loader->setProperty("active", true);
+    QTRY_COMPARE(componentLoadedSpy.count(), 1);
+
+    QTRY_VERIFY(mouseArea->property("isToolTipVisible").toBool());
 }
 
 QTEST_QUICKCONTROLS_MAIN(tst_QQuickPopup)
